UserStore.log
.\uk\ac\warwick\java\cs126\services\IntegratedSortedListAndHashMap.java:24: error: cannot find symbol
        int hash = hash(u.getId());
                         ^
  symbol:   method getId()
  location: variable u of type ListElement<User>
  where User is a type-variable:
    User extends Object declared in class IntegratedSortedListAndHashMap
.\uk\ac\warwick\java\cs126\services\IntegratedSortedListAndHashMap.java:35: error: cannot find symbol
            Date UserJoined = u.getValue().getDateJoined();
                                          ^
  symbol:   method getDateJoined()
  location: class Object
.\uk\ac\warwick\java\cs126\services\IntegratedSortedListAndHashMap.java:36: error: cannot find symbol
            if(ptr.getValue().getDateJoined().before(UserJoined)){
                             ^
  symbol:   method getDateJoined()
  location: class Object
.\uk\ac\warwick\java\cs126\services\IntegratedSortedListAndHashMap.java:43: error: cannot find symbol
                if(ptr.getValue().getDateJoined().before(UserJoined)){
                                 ^
  symbol:   method getDateJoined()
  location: class Object
.\uk\ac\warwick\java\cs126\services\MyLinkedList.java:74: error: not a statement
        E[this.size()] tmp;
         ^
.\uk\ac\warwick\java\cs126\services\MyLinkedList.java:74: error: ';' expected
        E[this.size()] tmp;
                      ^
.\uk\ac\warwick\java\cs126\services\MyLinkedList.java:74: error: not a statement
        E[this.size()] tmp;
                       ^
.\uk\ac\warwick\java\cs126\services\IntegratedSortedListAndHashMap.java:63: error: cannot find symbol
        while(ptr != null && ptr.getValue().getDateJoined().before(dateBefore)) {
                                           ^
  symbol:   method getDateJoined()
  location: class Object
.\uk\ac\warwick\java\cs126\services\IntegratedSortedListAndHashMap.java:74: error: cannot find symbol
            if (ptr.getValue().getName().contains(query)){
                              ^
  symbol:   method getName()
  location: class Object
.\uk\ac\warwick\java\cs126\services\IntegratedSortedListAndHashMap.java:87: error: cannot find symbol
            if (ptr.getValue().getId()==uid) {
                              ^
  symbol:   method getId()
  location: class Object
.\uk\ac\warwick\java\cs126\services\IntegratedSortedListAndHashMap.java:96: error: cannot find symbol
        ListElement<E> ptr = head;
                    ^
  symbol:   class E
  location: class IntegratedSortedListAndHashMap<User>
  where User is a type-variable:
    User extends Object declared in class IntegratedSortedListAndHashMap
.\uk\ac\warwick\java\cs126\services\IntegratedSortedListAndHashMap.java:109: error: cannot find symbol
        Comparator<User> c = new Comparator<User>(){
        ^
  symbol:   class Comparator
  location: class IntegratedSortedListAndHashMap<User>
  where User is a type-variable:
    User extends Object declared in class IntegratedSortedListAndHashMap
.\uk\ac\warwick\java\cs126\services\IntegratedSortedListAndHashMap.java:109: error: cannot find symbol
        Comparator<User> c = new Comparator<User>(){
                                 ^
  symbol:   class Comparator
  location: class IntegratedSortedListAndHashMap<User>
  where User is a type-variable:
    User extends Object declared in class IntegratedSortedListAndHashMap
.\uk\ac\warwick\java\cs126\services\IntegratedSortedListAndHashMap.java:124: error: generic array creation
        User[] tmp = new User[this.count];
                     ^
.\uk\ac\warwick\java\cs126\services\MyLinkedList.java:74: error: cannot find symbol
        E[this.size()] tmp;
        ^
  symbol:   variable E
  location: class MyLinkedList<E>
  where E is a type-variable:
    E extends Object declared in class MyLinkedList
.\uk\ac\warwick\java\cs126\services\MyLinkedList.java:77: error: cannot find symbol
            tmp[i] = ptr.getValue();
            ^
  symbol:   variable tmp
  location: class MyLinkedList<E>
  where E is a type-variable:
    E extends Object declared in class MyLinkedList
Note: .\uk\ac\warwick\java\cs126\services\IntegratedSortedListAndHashMap.java uses unchecked or unsafe operations.
Note: Recompile with -Xlint:unchecked for details.
16 errors
